# btc-mining

./: CMakeLists.txt  README.md  main.cpp
include/: arguments.hpp  bech32.hpp  bitcoinrpc.hpp  calculation.hpp  coinbase.hpp  exceptions.hpp  segwit_addr.hpp  types.hpp
src/: arguments.cpp  bech32.cpp  bitcoinrpc.cpp  calculation.cpp  coinbase.cpp  segwit_addr.cpp
